objects/EventLog__e.object
<CustomObject>
    <description>Used to log any events we need to track in the instance.</description>
    <fields>
        <fullName>Full_Message__c</fullName>
        <description>The full message for the event goes here.</description>
        <label>Full Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Log_Level__c</fullName>
        <defaultValue>&quot;INFO&quot;</defaultValue>
        <description>How Important is the Message? INFO, WARNING, ERROR, CRITICAL</description>
        <label>Log Level</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>The source of event.</description>
        <label>Source</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>EventLog</label>
    <pluralLabel>EventLogs</pluralLabel>
</CustomObject>